# ShopEase

./: .env.example  CONTRIBUTING.md  CTO_AUDIT_REPORT.md  README.md  alembic.ini  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 01-epic.yml  02-feature.yml  03-task.yml  04-bug.yml  05-security.yml  config.yml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_create_inventory_tables.py
app/: config.py  main.py  models.py
app/db/: models.py
app/repositories/: __init__.py  inventory_repository.py  postgres_inventory_repository.py
app/services/: inventory_service.py
docs/: ARCHITECTURE.md  INITIAL_BACKLOG.md  PROJECT_OPERATING_SYSTEM.md  RESEARCH_AND_10_10_PLAN.md
tests/: conftest.py  test_api.py  test_inventory_service.py
tests/integration/: test_postgres_inventory_repository.py
